src/objects/Study_Country__c.object
<CustomObject>
    <description>Junction Object between Study &amp; Country containing In what Countries is the Study being conducted.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Study Countries</relationshipLabel>
        <relationshipName>RWE_Countries_Study</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <description>Study being conducted</description>
        <inlineHelpText>Study being conducted</inlineHelpText>
        <label>Study being conducted in the Country</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Countries the Study is being conducted in</relationshipLabel>
        <relationshipName>RWE_StudyConducted_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_StudyConductingCountry_TF__c</fullName>
        <label>Unique StudyConductingCountry TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Study Country</label>
    <nameField>
        <displayFormat>RWE-SC-{00000000}</displayFormat>
        <label>Study Country Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>